# collector

./: CMakeLists.txt
examples/: CMakeLists.txt  admin.c  client.c  server.c
include/collector/: collector-admin.h  collector-backend.h  collector-client.h  collector-common.h  collector-metric.h  collector-provider-handle.h  collector-server.h
src/: CMakeLists.txt  admin.c  admin.h  bedrock-module.c  client.c  client.h  collector-admin.pc.in  collector-client.pc.in  collector-config.cmake.in  collector-server.pc.in  provider.c  provider.h  types.h
src/dummy/: dummy-backend.c  dummy-backend.h
tests/: CMakeLists.txt  test-admin.c  test-client.c
